<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <GridView
        android:id="@+id/gw_lstPhoto"
        android:layout_width="match_parent"
        android:layout_height="611dp"
        android:layout_marginTop="10dp"
        android:columnWidth="66dp"
        android:horizontalSpacing="30dp"
        android:numColumns="2"
        android:verticalSpacing="30dp"
        android:visibility="visible">
    </GridView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="download from S3" />
    </LinearLayout>
</RelativeLayout>
